# CornerStoneServer

./: .gitignore  Cargo.toml  README.md
scripts/: README.md  package.json  runtime.d.ts  tsconfig.json
scripts/database/: cards.ts  index.ts
scripts/database/cards/: rules_reminders.ts  trial_deck_1.ts  trial_deck_2.ts
scripts/events/: test.ts
src/: main.rs
src/game/: card.rs  controller.rs  game_state.rs  mod.rs  script_host.rs
src/game/events/: add_controller.rs  create_card.rs  event.rs  give_card_to_controller.rs  mod.rs  start_game.rs
visual_spoiler/: package.json
visual_spoiler/public/: manifest.json
visual_spoiler/src/: global.css
visual_spoiler/src/components/: card.tsx
visual_spoiler/src/routes/: index.tsx
visual_spoiler/src/routes/[decklist]/: index.tsx
visual_spoiler/src/routes/db/: index.tsx
